Updated email address of maintainer
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/seqLogo@28473 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Author: Oliver Bembom
 Description: seqLogo takes the position weight matrix of a DNA
 	sequence motif and plots the corresponding sequence logo as
 	introduced by Schneider and Stephens (1990). 
-Maintainer: Oliver Bembom <bembom@berkeley.edu>	
+Maintainer: Oliver Bembom <oliver.bembom@gmail.com>	
 Depends: methods, grid
 Collate:  AllClasses.R AllGenerics.R pwm.R seqLogo.R zzz.R
 License: LGPL version 2 or newer
