--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: seqLogo
 Title: Sequence logos for DNA sequence alignments
-Version: 1.33.1
+Version: 1.33.2
 Author: Oliver Bembom
 Description: seqLogo takes the position weight matrix of a DNA
 	sequence motif and plots the corresponding sequence logo as
@@ -8,7 +8,7 @@ Description: seqLogo takes the position weight matrix of a DNA
 Maintainer: Oliver Bembom <oliver.bembom@gmail.com>	
 Imports: stats4
 Depends: methods, grid
-Collate:  AllClasses.R AllGenerics.R pwm.R seqLogo.R zzz.R
+Collate:  AllClasses.R AllGenerics.R pwm.R seqLogo.R
 License: LGPL (>= 2)
 LazyLoad: yes
 biocViews: SequenceMatching
