--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,5 @@
 import(stats4)
 import(methods, grid)
-importFrom(graphics, plot)
 export(seqLogo, makePWM)
 exportClasses("pwm")
-exportMethods("plot", "summary", "print", "show")
+exportMethods("plot", "summary", "show")
